@@ -1,3 +1,12 @@
+2001-07-12  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* examples/cppunittest/TestFailureTest.h:
+	* include/cppunit/Exception.h:
+	* include/cppunit/NotEqualException.h:
+	* src/cppunit/Exception.cpp:
+	* src/cppunit/NotEqualException.cpp: Add "throw()" to overridden
+	std::exception destructors; required for GCC 3.0.
+
 2001-07-07  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* include/cppunit/Makefile.am: Clean config-auto.h using
